# parallel-huffman

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile2  README.md  main.cpp  output  test.cpp
asx/: asx1.cpp  asx1.hpp  asx2.cpp  asx2.hpp  utils.cpp  utils.hpp
asx/inputs/: sample.txt
includes/: asx1.h  asx2.h  ff_solution.h  huffman.h  nt_solution.h  seq_solution.h  tests.h  utils.h
inputs/: 1000.txt  100k.txt  10k  10k.txt  1k  200k  50k  sample.txt
outputs/: ff_par_m.csv  ff_results.csv  nt_par_l.csv  nt_par_m.csv  nt_par_s.csv  nt_results.csv  par_dynamic_results.csv  par_dynamic_threads.csv  par_results.csv  par_two_threads.csv  results.ipynb  results.txt  seq2_results.csv  seq_perc_stages_l.csv  seq_perc_stages_m.csv  seq_perc_stages_s.csv  seq_results.csv  seq_stages_result.csv  sq_results.csv
src/: asx1.cpp  asx2.cpp  asx3.cpp  ff_solution.cpp  huffman.cpp  main.cpp  nt_solution.cpp  results.ipynb  seq_solution.cpp  tests.cpp  utils.cpp
